Documentation has been updated.
